--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 				<td valign="top" align="right">					
 					<form action="javascript:calculateProduct()">
 						<label for="userNum1">Enter a positive integer:</label>
-						<input type="number" step="1" id="userNum1"><br><br>		
+						<input type="number" step="1" min="0" id="userNum1"><br><br>		
 						<label for="userNum2">Enter another positive integer:</label>
-						<input type="number" step="1" id="userNum2"><br><br>
+						<input type="number" step="1" min="0" id="userNum2"><br><br>
 						<input type="submit" value="Calculate Product">
 					</form>
 				</td>
